# Server-Client

./: .gitignore  README.md
Client/: CMakeLists.txt  Client.sln
Client/Client/: AESWrapper.cpp  AESWrapper.h  Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters  ClientHandler.cpp  ClientHandler.h  Protocol.cpp  Protocol.h  RSAWrapper.h  SocketHandler.cpp  SocketHandler.h  cksum.cpp  cksum.h  main.cpp  me.info  priv.key  sendFile.txt  sendFile2.txt  transfer.info
Client/Client/x64/Debug/: Client.exe.recipe  vc143.idb
Client/Client/x64/Debug/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Server/: defensive.db  server.py
Server/Database/: Clients.py  Database.py
Server/Protocol/: protocolHandler.py
Server/Protocol/Request/: Request.py  RequestHeader.py  RequestPayload.py  RequestPayloadCode.py
Server/Protocol/Response/: Response.py  ResponseHeader.py  ResponsePayload.py  ResponsePayloadCode.py
Server/Utils/: cksum.py  utils.py
